--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
             android:name=".activity.RegisterActivity"
             android:windowSoftInputMode="adjustResize" />
 
+        <activity android:name=".activity.MainActivity" />
+
     </application>
 
 </manifest>
