--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "wise.military.wisemilitarylife"
+        applicationId "wise.military.life"
         minSdk 23
         targetSdk 31
         versionCode 1
