--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="wise.military.wisemilitarylife">
+    package="wise.military.life">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.WiseMilitaryLife">
 
         <activity
-            android:name=".activity.LoginActivity"
+            android:name="wise.military.life.activity.LoginActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
@@ -24,10 +24,10 @@
         </activity>
 
         <activity
-            android:name=".activity.RegisterActivity"
+            android:name="wise.military.life.activity.RegisterActivity"
             android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".activity.MainActivity" />
+        <activity android:name="wise.military.life.activity.MainActivity" />
 
     </application>
 
