Feat: 체온 체크 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
 
         <activity android:name="wise.military.life.activity.MainActivity" />
 
+        <activity
+            android:name=".activity.CheckTempActivity"
+            android:windowSoftInputMode="adjustResize" />
+
     </application>
 
 </manifest>
