--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,12 @@
             android:name="wise.military.life.activity.RegisterActivity"
             android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name="wise.military.life.activity.MainActivity" />
-
         <activity
             android:name=".activity.CheckTempActivity"
             android:windowSoftInputMode="adjustResize" />
+
+        <activity android:name=".activity.CheckVaccineActivity" />
+        <activity android:name="wise.military.life.activity.MainActivity" />
 
     </application>
 
