--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "com.airbnb.android:lottie-compose:4.1.0"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.18.0"
 }
